--- a/Sunduk.PWA/Shared/MainLayout.razor
+++ b/Sunduk.PWA/Shared/MainLayout.razor
@@ -51,7 +51,7 @@
 
 @code
 {
-    public static bool DebugMode { get; set; } = false;
+    public static bool DebugMode { get; set; } = true;
     public bool ExperimentalMode { get; set; } = DebugMode;
 
     [Inject] IBreakpointService BreakpointListener { get; set; }
